--- a/public/css/trangchu.css
+++ b/public/css/trangchu.css
@@ -57,6 +57,7 @@ p {
 
 
 
+
 /*====================================================
                   BUTTON
 ======================================================*/
@@ -96,6 +97,7 @@ p {
     color: #fff;
     cursor: pointer;
 }
+
 
 
 /*====================================================
@@ -176,111 +178,200 @@ p {
     }
 }
 
+
 /*====================================================
                         ABOUT
 ======================================================*/
 
-    .about .about-content-box {
-        padding: 80px 20px;
-        text-align: center;
+.about .about-content-box {
+    padding: 80px 20px;
+    text-align: center;
+}
+
+.about-content-box>i {
+    color: #fff;
+    height: 150px;
+    line-height: 150px;
+    font-size: 100px;
+}
+
+.about-content-box>h5 {
+    color: #fff;
+    text-transform: none;
+    font-weight: normal;
+    padding: 20px 0 10px 0;
+}
+
+.about-content-box>p {
+    color: #fff;
+}
+
+@media (max-width: 767px) {
+    .about .container-fluid {
+        width: 60%
     }
 
-    .about-content-box>i {
-        color: #fff;
-        height: 150px;
-        line-height: 150px;
-        font-size: 100px;
+    .about .container-fluid .col-md-4 {
+        margin: 15px 0;
+    }
+}
+
+@media (max-width: 585px) {
+    .about .container-fluid {
+        width: 80%
     }
 
-    .about-content-box>h5 {
-        color: #fff;
-        text-transform: none;
-        font-weight: normal;
-        padding: 20px 0 10px 0;
+    .about .container-fluid .col-md-4 {
+        margin: 15px 0;
+    }
+}
+
+
+@media (max-width: 420px) {
+    .about .container-fluid {
+        width: 100%
     }
 
-    .about-content-box>p {
-        color: #fff;
+    .about .container-fluid .col-md-4 {
+        margin: 0;
     }
-
-    @media (max-width: 767px) {
-        .about .container-fluid {
-            width: 60%
-        }
-
-        .about .container-fluid .col-md-4 {
-            margin: 15px 0;
-        }
-    }
-
-    @media (max-width: 585px) {
-        .about .container-fluid {
-            width: 80%
-        }
-
-        .about .container-fluid .col-md-4 {
-            margin: 15px 0;
-        }
-    }
+}
 
 
-    @media (max-width: 420px) {
-        .about .container-fluid {
-            width: 100%
-        }
-
-        .about .container-fluid .col-md-4 {
-            margin: 0;
-        }
-    }
-
-    /*====================================================
+/*====================================================
                     COLOR (Generic)
 ======================================================*/
 
-    .cl-white {
-        color: #fff;
+.cl-white {
+    color: #fff;
+}
+
+.cl-atlantis {
+    color: #fff;
+}
+
+.bg-white {
+    background: #fff;
+}
+
+.bg-atlantis {
+    background: #2196f3;
+}
+
+.bg-starship {
+    background: #cdd613;
+}
+
+.bg-matisse {
+    background: #0b385d;
+}
+
+.bg-chathams {
+    background: #0aa1b9;
+}
+
+.bg-gray {
+    background: #f0f0f0;
+}
+
+.bg-light-gray {
+    background: #f9f9f9;
+}
+
+.bg-gradiant {
+    background: -moz-linear-gradient(45deg, rgba(34, 155, 242, 1) 0%, rgba(0, 128, 129, 1) 99%, rgba(0, 128, 128, 1) 100%);
+    /* ff3.6+ */
+    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(34, 155, 242, 1)), color-stop(99%, rgba(0, 128, 129, 1)), color-stop(100%, rgba(0, 128, 128, 1)));
+    /* safari4+,chrome */
+    background: -webkit-linear-gradient(45deg, rgba(34, 155, 242, 1) 0%, rgba(0, 128, 129, 1) 99%, rgba(0, 128, 128, 1) 100%);
+    /* safari5.1+,chrome10+ */
+    background: -o-linear-gradient(45deg, rgba(34, 155, 242, 1) 0%, rgba(0, 128, 129, 1) 99%, rgba(0, 128, 128, 1) 100%);
+    /* opera 11.10+ */
+}
+
+
+/*====================================================
+               OTHER HOME PAGE
+======================================================*/
+
+.home-p {
+    z-index: 1;
+    padding: 100px 0;
+    position: relative;
+}
+
+.home-p.breadcrumbs-lg {
+    padding: 200px 0;
+}
+
+.home-p.pages-head1 {
+    background: url(../img/img/banner-1.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.home-p.pages-head2 {
+    background: url(../img/img/banner-2.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.home-p.pages-head3 {
+    background: url(../img/img/banner-3.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.home-p.pages-head4 {
+    background: url(../img/img/banner-4.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.home-p:after {
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    content: " ";
+    position: absolute;
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.home-p h1 {
+    color: #fff;
+    font-size: 40px;
+    line-height: 50px;
+    text-transform: uppercase;
+}
+
+.home-p p {
+    color: #fff;
+    font-size: 24px;
+    font-weight: 200;
+    margin-bottom: 0;
+    text-transform: uppercase;
+}
+
+@media (max-width: 992px) {
+    .home-p.breadcrumbs-lg {
+        padding: 100px 0;
+    }
+}
+
+@media (max-width: 768px) {
+    .home-p,
+    .home-p.breadcrumbs-lg {
+        padding: 50px 0;
     }
 
-    .cl-atlantis {
-        color: #fff;
+    .home-p h1 {
+        font-size: 30px;
+        line-height: 40px;
     }
 
-    .bg-white {
-        background: #fff;
+    .home-p p {
+        font-size: 18px;
     }
-
-    .bg-atlantis {
-        background: #2196f3;
-    }
-
-    .bg-starship {
-        background: #cdd613;
-    }
-
-    .bg-matisse {
-        background: #0b385d;
-    }
-
-    .bg-chathams {
-        background: #0aa1b9;
-    }
-
-    .bg-gray {
-        background: #f0f0f0;
-    }
-
-    .bg-light-gray {
-        background: #f9f9f9;
-    }
-
-    .bg-gradiant {
-        background: -moz-linear-gradient(45deg, rgba(34, 155, 242, 1) 0%, rgba(0, 128, 129, 1) 99%, rgba(0, 128, 128, 1) 100%);
-        /* ff3.6+ */
-        background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(34, 155, 242, 1)), color-stop(99%, rgba(0, 128, 129, 1)), color-stop(100%, rgba(0, 128, 128, 1)));
-        /* safari4+,chrome */
-        background: -webkit-linear-gradient(45deg, rgba(34, 155, 242, 1) 0%, rgba(0, 128, 129, 1) 99%, rgba(0, 128, 128, 1) 100%);
-        /* safari5.1+,chrome10+ */
-        background: -o-linear-gradient(45deg, rgba(34, 155, 242, 1) 0%, rgba(0, 128, 129, 1) 99%, rgba(0, 128, 128, 1) 100%);
-        /* opera 11.10+ */
-    }
+}
