done views tintuc

--- a/public/css/pages/news.css
+++ b/public/css/pages/news.css
@@ -55,23 +55,12 @@
 	padding: 50px;
 }
 
-.single-news-p1 .single-news-desc li{
-	display: inline-block;
-	vertical-align: top;
-	display: inline; /* Fix for IE7 */
-	margin: 0 40px 0 0;
-}
-
-.single-news-p1 .single-news-desc .bg-light-gray{
-	padding:20px 10px;
-}
-
-.single-news-p1 .single-news-desc .bg-light-gray p{
-	font-size: 14px;
-}
-
 .single-news-p1 a {
 	text-decoration: none;
+}
+
+.single-news-p1 p {
+	color: black;
 } 
 
 /*====================================================
