--- a/public/css/trangchu.css
+++ b/public/css/trangchu.css
@@ -42,8 +42,6 @@ p {
 }
 
 
-
-
 /*====================================================
                   BUTTON
 ======================================================*/
@@ -310,6 +308,18 @@ p {
 
 .home-p.pages-head4 {
     background: url(../img/banner/banner-4.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.home-p.pages-head5 {
+    background: url(../img/banner/banner-5.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.home-p.pages-head6 {
+    background: url(../img/banner/banner-6.jpg) no-repeat;
     background-size: cover;
     background-position: center center;
 }
