--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -8,7 +8,7 @@
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    background: rgba(0, 0, 0, 0.5) url('/img/HUST.jpg');
+    background: rgba(0, 0, 0, 0.5) url('/img/hust.jpg');
     background-size: cover;
     background-blend-mode: overlay;
 }
